--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <div id="root" class="root">
       <h1>Not Rendered</h1>
     </div>
-    <script src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
   </body>
 </html>
